# LocalHook

./: CMakeLists.txt  README.md  add.cpp  add.h  main.cpp
Hook/: CMakeLists.txt  hook.cpp  hook.h
Log/: CMakeLists.txt  LogStream.cpp  LogStream.h
Tests/: CMakeLists.txt  test.cpp
